採用情報ページボタンの位置変更

--- a/recruit.html
+++ b/recruit.html
@@ -65,48 +65,52 @@
                     <small>採用情報</small>
                 </div>
 
-        <!-- 募集要項 -->
-        <div class="container">
-            <div class="table-wrapper">
-                <h3> 募集要項</h3>
-                <table class="job-table table">
-                    <tbody>
-                        <tr>
-                            <th>職種</th>
-                            <td>キッチンスタッフ、ホールスタッフ</td>
-                        </tr>
-                        <tr>
-                            <th>雇用区分</th>
-                            <td>正社員</td>
-                        </tr>
-                        <tr>
-                            <th>応募資格</th>
-                            <td>高卒以上</td>
-                        </tr>
-                        <tr>
-                            <th>給与</th>
-                            <td>月給〇〇万円～(経験を考慮し当社規定による)</td>
-                        </tr>
-                        <tr>
-                            <th>昇給賞与</th>
-                            <td>年1回(前年度業績による)</td>
-                        </tr>
-                        <tr>
-                            <th>福利厚生</th>
-                            <td>社保完備、社員割引</td>
-                        </tr>
-                        <tr>
-                            <th>休日休暇</th>
-                            <td>シフト勤務(週休2日)<br>
-                                年末年始休暇</td>
-                        </tr>
-                    </tbody>
-                </table>
+            <!-- 募集要項 -->
+            <div class="container">
+                <div class="table-wrapper">
+                    <h3> 募集要項</h3>
+                    <table class="job-table table">
+                        <tbody>
+                            <tr>
+                                <th>職種</th>
+                                <td>キッチンスタッフ、ホールスタッフ</td>
+                            </tr>
+                            <tr>
+                                <th>雇用区分</th>
+                                <td>正社員</td>
+                            </tr>
+                            <tr>
+                                <th>応募資格</th>
+                                <td>高卒以上</td>
+                            </tr>
+                            <tr>
+                                <th>給与</th>
+                                <td>月給〇〇万円～(経験を考慮し当社規定による)</td>
+                            </tr>
+                            <tr>
+                                <th>昇給賞与</th>
+                                <td>年1回(前年度業績による)</td>
+                            </tr>
+                            <tr>
+                                <th>福利厚生</th>
+                                <td>社保完備、社員割引</td>
+                            </tr>
+                            <tr>
+                                <th>休日休暇</th>
+                                <td>シフト勤務(週休2日)<br>
+                                    年末年始休暇</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div> <!-- .table-wrapper END -->
+
                 <!-- ボタン -->
-                <div class="btn-wrap"><a class="btn form-btn" href="recruit_form.html">ご応募はこちら<i class="fas fa-angle-right"></i></a></div>
-            </div>
-        </div> <!-- .container END -->
-        </div>
+                <div class="btn-wrap">
+                    <a class="btn form-btn" href="recruit_form.html">ご応募はこちら<i class="fas fa-angle-right"></i></a>
+                </div>
+
+            </div> <!-- .container END -->
+        </div> <!-- .job-wrapper END -->
 
         <!-- フッター -->
         <!--#include file="inc/footer.html" -->
