フォントサイズ変更

--- a/artical.html
+++ b/artical.html
@@ -90,7 +90,7 @@
 
             <!-- ボタン -->
             <div class="btn-wrap">
-                <a class="artical-btn" href="news.html"><i class="fas fa-angle-left artical-btn1_ico"></i>前のページ</a>
+                <a class="artical-btn" href="artical.html"><i class="fas fa-angle-left artical-btn1_ico"></i>前のページ</a>
                 <a class="artical-btn" href="news.html">一覧へ戻る</a>
                 <a class="artical-btn" href="artical.html">次のページ<i class="fas fa-angle-right artical-btn2_ico"></i></a>
             </div>
