採用情報ページ項目追加、フォーム余白変更

--- a/recruit.html
+++ b/recruit.html
@@ -84,6 +84,10 @@
                                 <td>高卒以上</td>
                             </tr>
                             <tr>
+                                <th>歓迎する経験</th>
+                                <td>接客業経験者優遇</td>
+                            </tr>
+                            <tr>
                                 <th>給与</th>
                                 <td>月給〇〇万円～(経験を考慮し当社規定による)</td>
                             </tr>
@@ -99,6 +103,10 @@
                                 <th>休日休暇</th>
                                 <td>シフト勤務(週休2日)<br>
                                     年末年始休暇</td>
+                            </tr>
+                            <tr>
+                                <th>年齢</th>
+                                <td>不問</td>
                             </tr>
                         </tbody>
                     </table>
