--- a/inc/link.html
+++ b/inc/link.html
@@ -1,5 +1,5 @@
 <!-- ファビコン -->
-<link rel="icon" type="image/png" href="img/favicon_coffee.png">
+<link rel="icon" type="image/png" href="img/favicon_beans.png">
 <!-- CSS -->
 <link rel="stylesheet" href="https://unpkg.com/destyle.css@1.0.5/destyle.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/luminous-lightbox/2.3.2/luminous-basic.min.css">
