お問い合わせフォーム余白、フォントサイズ変更

--- a/contact.html
+++ b/contact.html
@@ -105,6 +105,21 @@
                                             </td>
                                         </tr>
                                         <tr>
+                                            <th>郵便番号</th>
+                                            <td>〒
+                                                <input type="text" class="postal-code" name="postal-code">
+                                                ―
+                                                <input type="text" class="postal-code" name="postal-code">
+                                                <button class="postal-code-btn" type="button" value="郵便番号から住所を検索する">郵便番号から住所を検索する</button>
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <th>ご住所</th>
+                                            <td>
+                                                <input type="text" name="address">
+                                            </td>
+                                        </tr>    
+                                        <tr>
                                             <th>お問い合わせ内容
                                                 <span class="require">必須</span>
                                             </th>
