--- a/contact_confirm.html
+++ b/contact_confirm.html
@@ -96,6 +96,14 @@
                                         <td>XXXX@example.co.jp</td>
                                     </tr>
                                     <tr>
+                                        <th>郵便番号</th>
+                                        <td>123-4567</td>
+                                    </tr>
+                                    <tr>
+                                        <th>ご住所</th>
+                                        <td>東京都〇〇区…</td>
+                                    </tr>    
+                                    <tr>
                                         <th>お問い合わせ内容</th>
                                         <td>テキストが入ります。テキストが入ります。</td>
                                     </tr>
