採用情報ページレスポンシブ変更

--- a/recruit_thanks.html
+++ b/recruit_thanks.html
@@ -66,7 +66,8 @@
                 </div>
                 <div class="thanks-message">
                     <p>ご応募ありがとうございます。</p>
-                    <p>後日担当者からメールにてご連絡を差し上げます。<br>返信には3営業日ほどお時間を頂きます。</p>
+                    <p>後日担当者からメールにてご連絡を差し上げます。
+                        <br>返信には3営業日ほどお時間を頂きます。</p>
                 </div>
         </div>
 
