ニュースページページネーション変更

--- a/news.html
+++ b/news.html
@@ -139,10 +139,10 @@
                 <div class="btn-wrap">
                     <ul class="pagination">
                         <li><span class="current">1</span></li>
-                        <li><a href="">2</a></li>
-                        <li><a href="">3</a></li>
-                        <li><a href="">4</a></li>
-                        <li><a href="">></a></li>
+                        <li><a href="#">2</a></li>
+                        <li><a href="#">3</a></li>
+                        <li><a href="#">4</a></li>
+                        <li><a href="#">></a></li>
                     </ul>
                 </div>
             </div> <!-- .container END -->
